--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "build-css": "^0.2.0",
+    "classnames": "^2.3.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
