--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.21.1",
     "build-css": "^0.2.0",
     "classnames": "^2.3.1",
+    "ethers": "^4.0.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
