--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-step-progress-bar": "^1.0.3",
+    "react-table": "^7.7.0",
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2",
     "web3": "^1.4.0"
